--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width">
     <title>Blueweb</title>
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
+
 <div class="wrapper">
     <header class="header">
         <div class='container'>
@@ -32,8 +30,23 @@
             </div>
         </div>
     </header>
+    <div class="content">
+        <div class="container">
+            <div class="content__text">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam dolore eum expedita hic incidunt, nihil numquam officia officiis quia tempore temporibus vero voluptatem. Et itaque obcaecati repellendus velit. Assumenda eum eveniet facere fuga hic, ratione sint. Aperiam architecto atque consequatur dicta dolores eveniet explicabo fuga impedit inventore iure mollitia optio qui, repellendus sapiente sint vitae voluptatem? Atque delectus deleniti eligendi nostrum. Cupiditate dicta eos exercitationem fuga fugit, hic id in iste, laborum molestiae numquam porro quasi quibusdam voluptas voluptatem! Accusantium cum deleniti eligendi nobis quia, vitae! Beatae cupiditate fuga ipsam iste itaque numquam odio provident voluptatem! Ab aliquid architecto at autem corporis cupiditate dolor eius excepturi expedita, fugiat in labore maiores minus modi neque officiis placeat, quas qui quod repellat reprehenderit rerum similique soluta sunt tempora ullam vitae? Alias debitis dignissimos doloremque dolores doloribus eum, fugit illo illum iste, laborum maiores nisi pariatur porro quidem sequi? Accusamus alias at atque aut beatae consequuntur culpa debitis delectus distinctio eius esse eum excepturi, explicabo hic illum ipsa ipsum iure maiores necessitatibus nemo obcaecati officia optio provident, quaerat quas quod reiciendis repudiandae. Dignissimos est modi optio saepe. Ad consectetur cum eligendi, eum, laborum modi nam, officiis quisquam ratione repellendus sed tempora tempore! Ab minima modi natus obcaecati officiis quisquam saepe similique vero. Ab accusamus ad alias amet architecto assumenda consectetur consequatur delectus deleniti deserunt dolor dolore, dolores ducimus eaque earum eum explicabo facilis impedit incidunt iste laborum minima molestiae neque non nostrum officiis optio perferendis quas qui quibusdam quis quisquam quod rem reprehenderit temporibus voluptates voluptatum. Explicabo id illo ipsam ipsum laudantium nostrum numquam porro, saepe soluta ullam! Asperiores autem commodi consectetur delectus dicta dolores ducimus est hic ipsam laborum modi nam, nesciunt non perferendis praesentium, quasi qui rerum, unde? Ad aperiam, asperiores consectetur debitis dolor doloribus eos fugiat, hic incidunt ipsa sed sit sunt suscipit tempora tempore. A aliquid amet asperiores at aut beatae consequatur cupiditate, dolores ea esse eveniet exercitationem fugit ipsam laborum laudantium magnam maiores minima nam non, nostrum nulla numquam officiis omnis optio perferendis possimus quasi quis ratione repellat rerum saepe sit sunt temporibus tenetur veritatis voluptatem, voluptates! Accusamus aliquid animi aperiam at culpa dicta, dolorum ducimus ea eaque eligendi exercitationem explicabo facilis in itaque libero modi natus nisi non odio officia optio quam quas qui quo sint temporibus voluptas, voluptates. Alias, amet assumenda consectetur culpa debitis dicta et fugit harum id inventore ipsa laboriosam minima modi, nesciunt, perferendis qui quod reprehenderit. Ad, cum debitis dolorum eius eveniet illo obcaecati odit quae quam quia, soluta vero voluptatibus. Ab, accusamus dignissimos dolores earum eius eos est eum expedita illum ipsa ipsum nesciunt nobis quasi sapiente totam! A assumenda atque deleniti eaque in temporibus tenetur veniam! A, accusantium corporis ducimus et ex excepturi illum iure quia voluptatem voluptatum. Fugiat id illo rem. Doloremque illum incidunt inventore laudantium? Alias aliquam aliquid, architecto culpa cum, cupiditate debitis distinctio dolorem dolores ducimus enim illo ipsa non pariatur porro quas reiciendis repellendus reprehenderit sed sequi tempora temporibus tenetur vel voluptas voluptatem. At dolore, tempore?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam dolore eum expedita hic incidunt, nihil numquam officia officiis quia tempore temporibus vero voluptatem. Et itaque obcaecati repellendus velit. Assumenda eum eveniet facere fuga hic, ratione sint. Aperiam architecto atque consequatur dicta dolores eveniet explicabo fuga impedit inventore iure mollitia optio qui, repellendus sapiente sint vitae voluptatem? Atque delectus deleniti eligendi nostrum. Cupiditate dicta eos exercitationem fuga fugit, hic id in iste, laborum molestiae numquam porro quasi quibusdam voluptas voluptatem! Accusantium cum deleniti eligendi nobis quia, vitae! Beatae cupiditate fuga ipsam iste itaque numquam odio provident voluptatem! Ab aliquid architecto at autem corporis cupiditate dolor eius excepturi expedita, fugiat in labore maiores minus modi neque officiis placeat, quas qui quod repellat reprehenderit rerum similique soluta sunt tempora ullam vitae? Alias debitis dignissimos doloremque dolores doloribus eum, fugit illo illum iste, laborum maiores nisi pariatur porro quidem sequi? Accusamus alias at atque aut beatae consequuntur culpa debitis delectus distinctio eius esse eum excepturi, explicabo hic illum ipsa ipsum iure maiores necessitatibus nemo obcaecati officia optio provident, quaerat quas quod reiciendis repudiandae. Dignissimos est modi optio saepe. Ad consectetur cum eligendi, eum, laborum modi nam, officiis quisquam ratione repellendus sed tempora tempore! Ab minima modi natus obcaecati officiis quisquam saepe similique vero. Ab accusamus ad alias amet architecto assumenda consectetur consequatur delectus deleniti deserunt dolor dolore, dolores ducimus eaque earum eum explicabo facilis impedit incidunt iste laborum minima molestiae neque non nostrum officiis optio perferendis quas qui quibusdam quis quisquam quod rem reprehenderit temporibus voluptates voluptatum. Explicabo id illo ipsam ipsum laudantium nostrum numquam porro, saepe soluta ullam! Asperiores autem commodi consectetur delectus dicta dolores ducimus est hic ipsam laborum modi nam, nesciunt non perferendis praesentium, quasi qui rerum, unde? Ad aperiam, asperiores consectetur debitis dolor doloribus eos fugiat, hic incidunt ipsa sed sit sunt suscipit tempora tempore. A aliquid amet asperiores at aut beatae consequatur cupiditate, dolores ea esse eveniet exercitationem fugit ipsam laborum laudantium magnam maiores minima nam non, nostrum nulla numquam officiis omnis optio perferendis possimus quasi quis ratione repellat rerum saepe sit sunt temporibus tenetur veritatis voluptatem, voluptates! Accusamus aliquid animi aperiam at culpa dicta, dolorum ducimus ea eaque eligendi exercitationem explicabo facilis in itaque libero modi natus nisi non odio officia optio quam quas qui quo sint temporibus voluptas, voluptates. Alias, amet assumenda consectetur culpa debitis dicta et fugit harum id inventore ipsa laboriosam minima modi, nesciunt, perferendis qui quod reprehenderit. Ad, cum debitis dolorum eius eveniet illo obcaecati odit quae quam quia, soluta vero voluptatibus. Ab, accusamus dignissimos dolores earum eius eos est eum expedita illum ipsa ipsum nesciunt nobis quasi sapiente totam! A assumenda atque deleniti eaque in temporibus tenetur veniam! A, accusantium corporis ducimus et ex excepturi illum iure quia voluptatem voluptatum. Fugiat id illo rem. Doloremque illum incidunt inventore laudantium? Alias aliquam aliquid, architecto culpa cum, cupiditate debitis distinctio dolorem dolores ducimus enim illo ipsa non pariatur porro quas reiciendis repellendus reprehenderit sed sequi tempora temporibus tenetur vel voluptas voluptatem. At dolore, tempore?
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
 
-    <script src="js/script.js"></script>
+
+<script src="js/script.js"></script>
+
 </body>
+
 </html>
