--- a/index.html
+++ b/index.html
@@ -30,7 +30,31 @@
             </div>
         </div>
     </header>
-    
+    <div class="container">
+        <div class="content">
+            <div class="content__text">
+                <p>Больше, чем сайт. Надежнее, чем сейф!</p>
+                <p></p>
+                <p>Домен + хостинг + сайт + CRM + поддержка + продвижение</p>
+                <p>Стандарт начиная от $49.99 24/мес. </p>
+            </div>
+            <div class="content__text__n card">
+                <p>
+                    BlueWeb - НЕ конструктор сайтов!</p>
+                <p> BlueWeb - мощная и удобная платформа работающая под управлением системы с закрытой архитектурой "Blade MSP" (Multi Site Platform), которая позволяет вам эволюционировать от одностраничного сайта, до большого проекта с тысячами посетителей и десятками/сотнями тысяч записей (товары, новости, статьи и т.д.)</p>
+                <p> Легкий переход на расширенный пакет позволят расти вашему бизнесу без потребности заказывать новый сайт на другой платформе.</p>
+
+
+            </div>
+            <div class="content__photo__n">
+                <img src="img/cloudpic.jpg">
+            </div>
+            <div class="content__photo">
+                <img src="img/server-img.svg">
+            </div>
+        </div>
+
+    </div>
 </div>
 
 
