--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
 				          <li class="menu-active"><a href="index.html">Главная</a></li>
-				          <li><a href="ticket.html">Пакеты</a></li>
+				          <li><a href="packages.html">Пакеты</a></li>
 							<li><a href="about.html">О нас</a></li>
 
 				          <li><a href="contact.html">Контакты</a></li>
