--- a/packages.html
+++ b/packages.html
@@ -75,7 +75,7 @@
 								  <h4>SMART</h4>
 								  <p>
 									  Подойдет для:
-									  Если вам нужен сайт компании, сайт визитка, тематический блог, онлайн кафе. небольшой интернет-магазин или каталог.
+									  Если вам нужен сайт компании, сайт визитка, тематический блог, онлайн кафе. Yебольшой интернет-магазин или каталог.
 								  </p>
 								  <ol class="rounded" >
 									  <li >
@@ -154,7 +154,7 @@
 										  <a href="#" onclick="return false">+100$ на Google или FaceBook рекламу*</a>
 									  </li>
 								  </ol>
-								  <hr><hr>
+								  <hr>
 								  <a href="#" onclick="return false" class="primary-btn text-uppercase">$199.99/мес.</a>
 							  </div>
 						  </div>
@@ -196,7 +196,7 @@
 
 									  </li>
 								  </ol>
-								 <br> <hr>
+								 <br><br> <hr>
 								  <a href="#" onclick="return false" class="primary-btn text-uppercase">$299.99/мес.</a>
 
 							  </div>
